--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
-  "devDependencies": {
+  "dependencies": {
     "cordova-android": "^9.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.4"
